--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,8 @@
 .body {
     margin: auto;
     width: 500px;
-    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    /* font-family: Georgia, Cambria, "Times New Roman", Times, serif; */
+    font-family: "Amazon Ember", Helvetica, Arial, sans-serif;
 }
 
 .introduction {
@@ -22,6 +23,31 @@ ul {
 li {
     list-style-type: none;
     margin-bottom: 5px;
+}
+
+hr {
+    border-width: medium;
+    border-color: transparent;
+}
+
+.hr_e_learning {
+    background-color: #289D6A;
+}
+
+.hr_learning_path {
+    background-color: #473AAC;
+}
+
+.hr_curriculum {
+    background-color: #6E38CF;
+}
+
+.hr_video {
+    background-color: #289D6A;
+}
+
+.hr_course {
+    background-color: #2B7CEB;
 }
 
 img {
