--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@
     width: 500px;
     /* font-family: Georgia, Cambria, "Times New Roman", Times, serif; */
     font-family: "Amazon Ember", Helvetica, Arial, sans-serif;
+    line-height: 140%;
 }
 
 .introduction {
